--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
       </div>
       <!-- ✅ New Buy Now Button -->
-  <a href="https://www.m-atrading.com/product-details/banton-engine-coolant-1200ml" class="buy-now-btn">Buy Now</a>
+  <a href="https://www.m-atrading.com/checkout" class="buy-now-btn">Buy Now</a>
     </div>
 
     <!-- Product 2 -->
@@ -90,7 +90,7 @@
         </div>
       </div>
       <!-- ✅ New Buy Now Button -->
-  <a href="https://www.m-atrading.com/product-details/banton-premium-coolant" class="buy-now-btn">Buy Now</a>
+  <a href="https://www.m-atrading.com/checkout" class="buy-now-btn">Buy Now</a>
     </div>
 
     <!-- Product 3 -->
@@ -115,7 +115,7 @@
         </div>
       </div>
       <!-- ✅ New Buy Now Button -->
-  <a href="https://www.m-atrading.com/product-details/banton-engine-coolant-4l" class="buy-now-btn">Buy Now</a>
+  <a href="https://www.m-atrading.com/checkout" class="buy-now-btn">Buy Now</a>
     </div>
 
   </div>
@@ -237,3 +237,4 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
