--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
     <!-- Product 1 -->
     <div class="product-card">
-      <img src="premiumcool (1).png" alt="BANTON Coolant Premium 1200ml" />
-      <h3>BANTON Engine Coolant 1200ml (Premium)</h3>
+      <img src="5-removebg-preview (1).png" alt="BANTON Coolant Premium 1200ml" />
+      <h3>BANTON Engine Coolant 1L (Premium)</h3>
       <p class="price">৳ 800</p>
       <button class="details-toggle-btn">View Details</button>
       <div class="product-info hidden">
@@ -237,6 +237,7 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
 
