--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
   <title>Banton Engine Coolant</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-</head>
+
+
 <body>
   <header class="header">
     <div class="container">
-      <div class="logo">
-  <img src="banlogo.png" alt="M.A Trading Logo">
+    <div class="logo">
+  <a href="https://www.m-atrading.com/"><img src="banlogo.png" alt="Banton Lubricants Logo" />
+  </a>
 </div>
-      <nav class="navbar" id="navbar">
+     <nav class="navbar" id="navbar">
         <ul class="nav-links">
           <li><a href="https://www.m-atrading.com/products?categories=bike-engine-oil">Bike Engine Oil</a></li>
           <li><a href="https://www.m-atrading.com/products?categories=car-engine-oil">Car Engine Oil</a></li>
@@ -40,19 +42,27 @@
 
 <!-- Premium Product Section (with transparent images) -->
 <section class="product-section">
+
+   <!-- ✅ Section Title -->
+  <div class="section-title">
+    PRODUCT GALLERY
+  </div>
+
   <div class="product-grid">
 
     <!-- Product 1 -->
     <div class="product-card">
-      <img src="5-removebg-preview (1).png" alt="BANTON Coolant Premium 1200ml" />
+      <img src="5-removebg-preview (1).png" alt="BANTON Premium Engine Coolant 1200ml - Malaysia Imported" />
+
       <h3>BANTON Engine Coolant 1L (Premium)</h3>
       <p class="price">৳ 800</p>
+
       <button class="details-toggle-btn">View Details</button>
       <div class="product-info hidden">
         <ul>
-          <li><strong>স্পেসিফিকেশন:</strong> রেডি-টু-ইউজ কুল্যান্ট</li>
-          <li><strong>পরিমাণ:</strong> 1200ml</li>
-          <li><strong>উৎপত্তি:</strong> মালয়েশিয়া</li>
+          <li><strong>স্পেসিফিকেশন:</strong> Ready to use</li>
+          <li><strong>পরিমাণ:</strong> 1L</li>
+          <li><strong>উৎপত্তি:</strong> Malaysia</li>
         </ul>
         <div class="product-benefits">
           <h4>ব্যবহারের উপকারিতা:</h4>
@@ -70,15 +80,16 @@
 
     <!-- Product 2 -->
     <div class="product-card">
-      <img src="5-removebg-preview (1).png" alt="BANTON Coolant 1200ml" />
+<img src="5-removebg-preview (1).png" alt="BANTON Standard Engine Coolant 1200ml - Daily Use Coolant" />
+
       <h3>BANTON Engine Coolant 1200ml</h3>
       <p class="price">৳ 300</p>
       <button class="details-toggle-btn">View Details</button>
       <div class="product-info hidden">
         <ul>
-          <li><strong>স্পেসিফিকেশন:</strong> রেডি-টু-ইউজ কুল্যান্ট</li>
+          <li><strong>স্পেসিফিকেশন:</strong> Ready to use</li>
           <li><strong>পরিমাণ:</strong> 1200ml</li>
-          <li><strong>উৎপত্তি:</strong> মালয়েশিয়া</li>
+          <li><strong>উৎপত্তি:</strong> Malaysia</li>
         </ul>
         <div class="product-benefits">
           <h4>ব্যবহারের উপকারিতা:</h4>
@@ -95,15 +106,16 @@
 
     <!-- Product 3 -->
     <div class="product-card">
-      <img src="4Lcool (1).png" alt="BANTON Coolant 4 Litre" />
+      <img src="4Lcool (1).png" alt="BANTON Heavy Duty Engine Coolant 4 Litre - Long Distance Engine Cooling" />
+
       <h3>BANTON Engine Coolant 4 Litre</h3>
       <p class="price">৳ 1250</p>
       <button class="details-toggle-btn">View Details</button>
       <div class="product-info hidden">
         <ul>
-          <li><strong>স্পেসিফিকেশন:</strong> রেডি-টু-ইউজ কুল্যান্ট</li>
-          <li><strong>পরিমাণ:</strong> 4 লিটার</li>
-          <li><strong>উৎপত্তি:</strong> মালয়েশিয়া</li>
+          <li><strong>স্পেসিফিকেশন:</strong> Ready to use</li>
+          <li><strong>পরিমাণ:</strong> 4 Litres</li>
+          <li><strong>উৎপত্তি:</strong> Malaysia</li>
         </ul>
         <div class="product-benefits">
           <h4><strong>ব্যবহারের উপকারিতা:</strong></h4>
@@ -237,7 +249,3 @@
   <script src="script.js" defer></script>
 </body>
 </html>
-
-
-
-
