--- a/index.html
+++ b/index.html
@@ -40,6 +40,50 @@
   </div>
 </section>
 
+<section class="coolant-info-premium">
+  <div class="coolant-info-wrapper">
+    <div class="coolant-info-header">
+      <h2>আপনার গাড়ির ইঞ্জিনকে<br><span>ওভারহিটিং থেকে রক্ষা করুন</span></h2>
+    </div>
+
+    <div class="coolant-info-content">
+      <p class="intro">
+        গাড়ি চালালেই ইঞ্জিন গরম হয় — কিন্তু আপনি কি জানেন, অতিরিক্ত হিট থেকে ইঞ্জিনে আগুনও ধরে যেতে পারে?
+      </p>
+      <p>
+        সাধারন কুলেন্ট, ট্যাপের পানি কিংবা জং ধরা কুলেন্ট ব্যবহার করে আপনার ইঞ্জিনকে ঝুঁকির মধ্যে ফেলবেন না।
+        <strong>হেড গ্যাসকেট ব্লো, AC সমস্যাসহ একাধিক ক্ষতির মুখে পড়তে পারেন।</strong>
+      </p>
+
+      <div class="khoti-somadhan-container">
+        <div class="danger-block">
+          <h4>⚠️ ওভারহিটিং এর ক্ষতি:</h4>
+          <ul>
+            <li>রেডিয়েটর ট্যাঙ্ক ফুটা</li>
+            <li>ইঞ্জিন ওভারহিট হয়ে AC সমস্যা</li>
+            <li>ইঞ্জিন সিজ হয়ে যাওয়া</li>
+            <li>ব্যাটারির বিস্ফোরণ সম্ভাবনা</li>
+            <li>অয়েলের ক্ষমতা হ্রাস</li>
+          </ul>
+        </div>
+
+        <div class="solution-block">
+          <h4>✅ সমাধান — <span>BANTON PREMIUM COOLANT</span></h4>
+          <ul>
+            <li>মালয়েশিয়ান ফর্মুলা</li>
+            <li>সম্পূর্ণ Anti-Rust প্রযুক্তি</li>
+            <li>100% Concentrated</li>
+            <li>Engine Temperature নিয়ন্ত্রণে রাখে</li>
+            <li>জং, শ্যাওলা জমতে দেয় না</li>
+          </ul>
+        </div>
+      </div>
+
+      <p class="callout"><strong>ব্যবহার করুন BANTON COOLANT</strong> — গরমে গাড়িকে রাখুন ঠান্ডা, আপনি ও থাকুন ঠান্ডা।</p>
+    </div>
+  </div>
+</section>
+
 <!-- Premium Product Section (with transparent images) -->
 <section class="product-section">
 
@@ -210,7 +254,7 @@
       <h4>Contact Us</h4>
       <ul class="footer-contact">
         <li><i class="fas fa-envelope"></i> matrading824@gmail.com</li>
-        <li><i class="fas fa-phone-alt"></i> 01805-965222</li>
+        <li><i class="fas fa-phone-alt"></i> +8801886181885</li>
         <li><i class="fas fa-map-marker-alt"></i> No.5 Jahan bk 1/11, Bandar Kiniara, Puchang 47180, Selangor, Malaysia</li>
       </ul>
     </div>
@@ -249,4 +293,3 @@
   <script src="script.js" defer></script>
 </body>
 </html>
-
