--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     <h1>বিশ্বমানের ইঞ্জিন কুল্যান্ট এখন বাংলাদেশে</h1>
       <p>আপনার ইঞ্জিনকে দিন প্রিমিয়াম কুলিং সাপোর্ট — সরাসরি মালয়েশিয়া থেকে আমদানি করা।</p>
 
+       <a href="product-gallery" class="hero-button">পণ্য দেখুন</a>
+
   </div>
 </section>
 
