--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </section>
 
 <!-- Premium Product Section (with transparent images) -->
-<section class="product-section">
+<section class="product-gallery" id="product-gallery">
 
    <!-- ✅ Section Title -->
   <div class="section-title">
@@ -295,3 +295,4 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
