--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       <h4>Contact Us</h4>
       <ul class="footer-contact">
         <li><i class="fas fa-envelope"></i> matrading824@gmail.com</li>
-        <li><i class="fas fa-phone-alt"></i> +8801886181885</li>
+        <li><i class="fas fa-phone-alt"></i> 01805-965222</li>
         <li><i class="fas fa-map-marker-alt"></i> No.5 Jahan bk 1/11, Bandar Kiniara, Puchang 47180, Selangor, Malaysia</li>
       </ul>
     </div>
@@ -295,4 +295,5 @@
   <script src="script.js" defer></script>
 </body>
 </html>
+
 
